--- a/flower.css
+++ b/flower.css
@@ -13,14 +13,14 @@
 }
 
 body{
-    background-color: #FFF5E4;
+    background-color: ##ffc9c9;
     min-height: 100vh;
     display: flex;
     flex-direction: column; /* Change the direction to column */
     align-items: center;
     justify-content: flex-start; /* Align items to the start of the container */
     overflow: hidden;
-	color: #FF9494;
+	color: #ffe3e3;
 	font-family: courier;
 }
 
